manifests/retrieva/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: retrieva
  labels:
    kubernetes.io/metadata.name: retrieva
